fixed spacing of body and footer/ links

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,6 @@
+body{max-width: 800px;
+display: block;
+margin: 0 auto;}
 h1{text-align: center;}
 
 p{line-height: 1.5;
@@ -8,3 +11,12 @@ border-radius: 5px;
 width: 700px;
 display: block;
 margin: 0 auto;}
+
+footer{text-align: center;
+}
+
+.container-fluid{
+    width: 300px;
+    display: block;
+    margin: 0 auto;
+}
